[project]
name = "test-build-release"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.3",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
]

[tool.commitizen]
version = "0.2.1"
version_files = [
    # "src/__version__.py",
    "pyproject.toml:version"
]
